# polpatrol

./: .gitignore  Cargo.toml  Dockerfile  README.md  polkadot.diff  substrate.diff
docs/: conf.py  contributors.rst  getting-started.rst  index.rst
docs/_build/doctrees/: contributors.doctree  environment.pickle  getting-started.doctree  index.doctree  system.doctree
docs/_build/html/: .buildinfo  contributors.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  system.html
docs/_build/html/_sources/: getting-started.rst.txt  getting-started.txt  system.rst.txt
res/: adder.compact.wasm  kusama_modified_for_polpatrol.json  polkadot_runtime.compact_memoryleak_slotsbid_release.wasm  polkadot_runtime.compact_no_onlystakingandclaims_release.wasm
src/: generation.rs  main.rs  random.rs
src/generation/: balancesmodule.rs  claimsmodule.rs  councilmodule.rs  democracymodule.rs  finalitytrackermodule.rs  imonlinemodule.rs  slotsmodule.rs  timestampmodule.rs
